--- a/.github/workflows/trivy_scan.yml
+++ b/.github/workflows/trivy_scan.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
-        continue-on-error: true
+#        continue-on-error: true
         with:
           image-ref: 'my-app-image:${{ github.sha }}'
           format: 'sarif'
